# azure-databricks-lakehouse

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: data_quality_rules.yaml  pipeline_config.yaml
data/sample/: customers.csv  orders.csv  products.json
docs/: data_dictionary.md
infrastructure/azure-devops/: pipeline.yml
infrastructure/terraform/: main.tf
notebooks/: 01_bronze_ingestion.py  02_silver_transformation.py  03_gold_star_schema.py  04_data_quality_checks.py
scripts/: run_pipeline_local.py  setup_env.sh
src/data_quality/: validators.py
src/models/: scd_type2.py  star_schema.py
src/transformations/: bronze.py  gold.py  silver.py
src/utils/: helpers.py
tests/: conftest.py  test_data_quality.py  test_integration.py  test_scd.py  test_transformations.py
